Lecture 3 squashed commit

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -2,6 +2,5 @@
   font-size: 30px;
   text-align: center;
   padding: 10px 0 10px 0;
-  font-family: 'Quicksand', sans-serif;
-
+  background-color: rgb(250, 250, 250);
 }
