--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,11 @@ html,
 body {
   margin: 0;
   height: 100%;
+  font-family: 'Quicksand', sans-serif;
+}
+
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
