--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,7 +1,11 @@
 .footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   margin: auto 0;
-  padding: 10px 0 ;
+  padding: 10px 0;
   text-align: center;
-  background-color: #1d242c;
+  background-color: #1a1a18;
   color: white;
 }
