--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,10 @@ body {
   height: 100%;
   font-family: 'Quicksand', sans-serif;
 }
-
+body {
+  display: flex;
+  flex-direction: column;
+}
 ul, li {
   margin: 0;
   padding: 0;
