--- a/src/components/restaurant/restaurantsTabs/restaurantTabs.module.scss
+++ b/src/components/restaurant/restaurantsTabs/restaurantTabs.module.scss
@@ -1,8 +1,3 @@
-.restaurant_list {
-  display: flex;
-  justify-content: space-around;
-}
-
 .btnContainer {
   display: flex;
   justify-content: space-around;
@@ -13,5 +8,4 @@
     border: none;
     font-size: 15px;
     padding: 10px 10px;
-  }
-}
+  }}
