--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,14 @@
-html,
+
 body {
   margin: 0;
-  height: 100%;
   font-family: 'Quicksand', sans-serif;
 }
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
-ul, li {
+ul, li, p {
   margin: 0;
   padding: 0;
   list-style: none;
