--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,7 +1,8 @@
 .footer{
-  margin: auto 0;
+  margin-top: auto;
   padding: 10px 0;
   text-align: center;
   background-color: #1a1a18;
   color: white;
 }
+
