--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,6 +1,14 @@
 .header{
+  padding: 20px 0 20px 0;
+  background-color: rgb(250, 250, 250);
+}
+.title{
   font-size: 30px;
   text-align: center;
-  padding: 10px 0 10px 0;
-  background-color: rgb(250, 250, 250);
+}
+.headerItems{
+  display: flex;
+  width: 60%;
+  margin: 0 auto;
+  justify-content: space-between;
 }
