Lecture 8 hw commit

--- a/src/components/restaurant/restaurantItem/restaurantItem.module.scss
+++ b/src/components/restaurant/restaurantItem/restaurantItem.module.scss
@@ -1,7 +1,7 @@
 .restaurant_item {
   width: 350px;
   border: 1px solid whitesmoke;
-  color: #fafafa;
+  color: #2d2d2d;
   border-radius: 10px;
   text-align: center;
   background-color: rgba(14, 110, 255, 0.5);
